[tool.poetry]
name = "asyncbbb"
version = "0.1.0"
readme = "README.md"
description = ""
authors = ["Sebastian Lübke <luebke@gonicus.de>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
python-xml2dict = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
autoflake = "^1.4"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
